kubernetes/services/drone/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone
  labels:
    name: drone
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
